--- a/EF_Book_DataApp/appsettings.json
+++ b/EF_Book_DataApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PlayStation": "Server=PLAYSTATION\\SQLEXPRESS;Database=EFBook_DataAppDB;MultipleActiveResultSets=true"
+    "PlayStation": "Server=PLAYSTATION\\SQLEXPRESS;Database=EFBook_DataAppDB;MultipleActiveResultSets=true;Trusted_Connection=true"
   },
   "Logging": {
     "LogLevel": {
