--- a/EF_Book_DataApp/appsettings.json
+++ b/EF_Book_DataApp/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "PlayStation": "Server=PLAYSTATION\\SQLEXPRESS;Database=EFBook_DataAppDB;MultipleActiveResultSets=true;Trusted_Connection=true"
+    "PlayStationProducts": "Server=PLAYSTATION\\SQLEXPRESS;Database=EFBook_DataApp_ProductsDB;MultipleActiveResultSets=true;Trusted_Connection=true",
+    "PlayStationCustomers": "Server=PLAYSTATION\\SQLEXPRESS;Database=EFBook_DataApp_CustomersDB;MultipleActiveResultSets=true;Trusted_Connection=true"
   },
   "Logging": {
     "LogLevel": {
